--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -28,6 +28,9 @@
       <a href="" class="nav-item">Contacto</a>
       <a href="" class="nav-item">Login</a>
     </nav>
+
+    <h1 class="titulo">TuristicPark</h1>
+
     <div class="zonitas">
       <section class="zonas">
         <h2>Zonas Famosas</h2>
@@ -41,10 +44,25 @@
         </div>
       </section>
     </div>
+    <div class="nosotros-info">
+      <section class="informacion">
+        <h2>Sobre Nosotros</h2>
+        <h3>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae
+          totam laboriosam deserunt voluptate officiis quidem id voluptates
+          debitis, sed ad accusamus ex a at velit pariatur reprehenderit
+          assumenda, aliquam atque! Quisquam quod voluptatibus harum laborum.
+          Debitis numquam excepturi iste eaque maxime quibusdam, assumenda,
+          porro deleniti rerum quis esse vitae. Rerum magni doloremque modi,
+          iusto neque voluptatum accusantium dolorem velit commodi?
+        </h3>
+      </section>
+    </div>
 
     <section class="subscribase">
       <h2>Subscribirse para mas noticias</h2>
       <input type="text" placeholder="Ingrese su email" />
+      <button class="comenta">Enviar</button>
     </section>
 
     <section class="sobre-nosotros" id="sobre-nosotros">
@@ -64,6 +82,12 @@
           height="50"
         />
       </div>
+    </section>
+
+    <section class="comentarios">
+      <h2>Comentarios</h2>
+      <input type="text" placeholder="Comenta" />
+      <button class="comenta">Enviar</button>
     </section>
   </body>
 </html>
