--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -86,7 +86,7 @@
     <section class="comentarios" id="redes">
       <h2>Comentarios</h2>
       <form class="comentarios-form" method="get" action="./index.html" id="comentarios">
-      <input type="text" placeholder="Comenta" required/>
+      <input  name="comentarios" type="text" placeholder="Comenta" required/>
       <button class="comenta-boton" type="submit">Enviar</button>
     </section>
   </body>
