--- a/proyecto/subcribirse.html
+++ b/proyecto/subcribirse.html
@@ -35,7 +35,7 @@
     <section class="subscribase-contenedor">
       <h2>Subscribirse para mas noticias</h2>
       <form class="subscribase-form" method="get" action="./index.html" id="requieres">
-      <input type="email" placeholder="Ingrese su email" required/>
+      <input name="subscribase" type="email" placeholder="Ingrese su email" required/>
       <button class="subscribase-boton" type="submit">Enviar</button>
     </section></div>
   </body>
